--- a/about.html
+++ b/about.html
@@ -8,10 +8,17 @@
 </head>
 <body>
     <!-- ABOUT PAGE -->
-    <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li><a href = "about.html">About</a></li>
+            <li><a href = "menu.html">Menu</a></li>
+            <li><a href = "contact.html">Contact</a></li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
     <main>
-        <!-- About page code here -->
+        <h1>About</h1>
+        
     </main>
 </body>
 </html>
