--- a/index.html
+++ b/index.html
@@ -8,11 +8,28 @@
 </head>
 <body>
     <!-- HOME PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <nav>
+        <ul>
+            <li><a href = "about.html">About</a></li>
+            <li><a href = "menu.html">Menu</a></li>
+            <li><a href = "contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <img id = "banner" src = "./assets/images/banner.png" alt = "banner logo">
+
     <main>
         <h1>H-Thai-ML</h1>
-        <!-- TODO: Home page code here-->
+        <h2><q>We put the L in HTML</q></h2>
+        
+        <div class = "service">
+            <h3>Dine In</h3>
+            <h3>Take Out</h3>
+            <h3>Delivery</h3>
+        </div>
+
+        <img src = "./assets/images/table-in-restaurant.jpg" alt = "sooooooo many tables">
+
     </main>
 </body>
 </html>
