completed about page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <link rel = "stylesheet" href = "./assets/css/style.css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
@@ -18,7 +18,24 @@
     <!-- TODO: Banner Image here-->
     <main>
         <h1>About</h1>
-        
+        <h2>Locations</h2>
+        <ul>
+            <li>The MetaVerse</li>
+            <li>Gothanm City</li>
+            <li>Mushroom Kingdom</li>
+            <li>Sin City</li>
+        </ul>
+        <h2>Origin Story</h2>
+        <img src = "./assets/images/about.jpg" alt = "yummy food!">
+        <p>We decided to open our latest location in Mark Zuckerburg's MetaVerse
+            We went this route because we believe in the blockchain and understand
+            the importance of things NFTs and Dodgecoin. Why eat normal food when
+            you can enjoy a tasty NFT of food?! Obviously you will need one of our 
+            limited edition admission tokens to enter our Metaverse location, but 
+            I'm sure you can scavenge up some loose ethereum to purchase the token. 
+            You don't want to miss out on our newest Fried Rice NFT to show off to 
+            your friends. Yummy Yummy Blockchain!
+        </p>
     </main>
 </body>
 </html>
