--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <li><a href = "contact.html">Contact</a></li>
         </ul>
     </nav>
-    <!-- TODO: Banner Image here-->
+    <img id = "banner" src = "./assets/images/banner.png" alt = "banner logo">
     <main>
         <h1>About</h1>
         <h2>Locations</h2>
