--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <link rel = "stylesheet" href = "./assets/css/style.css">
+    <link 
+        rel = "stylesheet"
+        href = "https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity = "sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+        crossorigin="anonymous">
 </head>
 <body>
     <!-- CONTACT PAGE -->
-    <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li><a href = "about.html">About</a></li>
+            <li><a href = "menu.html">Menu</a></li>
+            <li><a href = "contact.html">Contact</a></li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
     <main>
         <h2>Hours of Operation</h2>
@@ -20,7 +31,9 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong>Phone Number: </strong>555-5555 <br>
+            <strong>Email: </strong> support@hTHAIml.com <br>
+            <strong>Address: </strong> 20 College Dropout Drive <br>
         </p>
     </main>
 </body>
