added menu page

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <li><a href = "contact.html">Contact</a></li>
         </ul>
     </nav>
-    <!-- TODO: Banner Image here-->
+    <img id = "banner" src = "./assets/images/banner.png" alt = "banner logo">
     <main>
         <h2>Hours of Operation</h2>
         <p>
