added font awesome icons, footer, new text banner, and general styling

--- a/about.html
+++ b/about.html
@@ -7,10 +7,10 @@
     <link rel = "stylesheet" href = "./assets/css/style.css">
 </head>
 <body>
-    <!-- ABOUT PAGE -->
+    <em>Closed on Flag Day, we are very serious about our commitment to flags</em>
     <nav>
         <ul>
-            <li><a href = "about.html">About</a></li>
+            <li><a class = "currentPage" href = "about.html">About</a></li>
             <li><a href = "menu.html">Menu</a></li>
             <li><a href = "contact.html">Contact</a></li>
         </ul>
@@ -21,7 +21,7 @@
         <h2>Locations</h2>
         <ul>
             <li>The MetaVerse</li>
-            <li>Gothanm City</li>
+            <li>Gotham City</li>
             <li>Mushroom Kingdom</li>
             <li>Sin City</li>
         </ul>
@@ -37,5 +37,8 @@
             your friends. Yummy Yummy Blockchain!
         </p>
     </main>
+    <footer>
+        "We put the L in HTML!"
+    </footer>
 </body>
 </html>
