--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
-    <!-- HOME PAGE -->
+    <em>Closed on Flag Day, we are very serious about our commitment to flags</em>
     <nav>
         <ul>
             <li><a href = "about.html">About</a></li>
@@ -31,5 +31,8 @@
         <img src = "./assets/images/table-in-restaurant.jpg" alt = "sooooooo many tables">
 
     </main>
+    <footer>
+        "We put the L in HTML!"
+    </footer>
 </body>
 </html>
