--- a/menu.html
+++ b/menu.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel = "stylesheet" href = "./assets/css/style.css">
+    <script src="https://kit.fontawesome.com/1bae50a556.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- MENU PAGE -->
+    <em>Closed on Flag Day, we are very serious about our commitment to flags</em>
     <nav>
         <ul>
             <li><a href = "about.html">About</a></li>
-            <li><a href = "menu.html">Menu</a></li>
+            <li><a class = "currentPage" href = "menu.html">Menu</a></li>
             <li><a href = "contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -26,7 +27,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Chicken Satay</td>
+                    <td><i class="fa-solid fa-fire"></i> Chicken Satay</td>
                     <td>$7.95</td>
                 </tr>
                 <tr>
@@ -44,15 +45,15 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Panang Curry</td>
+                    <td><i class="fa-solid fa-star"></i> Panang Curry</td>
                     <td>$9.95</td>
                 </tr>
                 <tr>
-                    <td>Red Curry</td>
+                    <td><i class="fa-solid fa-fire"></i> Red Curry</td>
                     <td>$9.95</td>
                 </tr>
                 <tr>
-                    <td>Yellow Curry</td>
+                    <td><i class="fa-solid fa-star"></i> Yellow Curry</td>
                     <td>$9.95</td>
                 </tr>
                 <tr>
@@ -60,7 +61,7 @@
                     <td>$8.95</td>
                 </tr>
                 <tr>
-                    <td>Tom Yum Soup</td>
+                    <td><i class="fa-solid fa-fire"></i> Tom Yum Soup</td>
                     <td>$8.95</td>
                 </tr>
             </tbody>
@@ -74,7 +75,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Pad Thai</td>
+                    <td><i class="fa-solid fa-star"></i> Pad Thai</td>
                     <td>$10.95</td>
                 </tr>
                 <tr>
@@ -149,5 +150,8 @@
             </tbody>
         </table>       
     </main>
+    <footer>
+        "We put the L in HTML!"
+    </footer>
 </body>
 </html>
