--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel = "stylesheet" href = "./assets/css/style.css">
-    <link 
-        rel = "stylesheet"
-        href = "https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity = "sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-        crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/1bae50a556.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- CONTACT PAGE -->
+    <em>Closed on Flag Day, we are very serious about our commitment to flags</em>
     <nav>
         <ul>
             <li><a href = "about.html">About</a></li>
             <li><a href = "menu.html">Menu</a></li>
-            <li><a href = "contact.html">Contact</a></li>
+            <li ><a class = "currentPage" href = "contact.html">Contact</a></li>
         </ul>
     </nav>
     <img id = "banner" src = "./assets/images/banner.png" alt = "banner logo">
@@ -31,10 +27,13 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number: </strong>555-5555 <br>
-            <strong>Email: </strong> support@hTHAIml.com <br>
-            <strong>Address: </strong> 20 College Dropout Drive <br>
+            <i class="fa-solid fa-phone"></i> <strong>Phone Number: </strong>555-5555 <br>
+            <i class="fa-solid fa-envelope"></i><strong>Email: </strong> support@hTHAIml.com <br>
+            <i class="fa-solid fa-map-location"></i><strong>Address: </strong> 20 College Dropout Drive <br>
         </p>
     </main>
+    <footer>
+        "We put the L in HTML!"
+    </footer>
 </body>
 </html>
