--- a/about.html
+++ b/about.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Title of Webpage "About Section" -->
+    <title>About H-Thai-ML</title>
+    <!-- Link to CSS stylesheet -->
     <link rel = "stylesheet" href = "./assets/css/style.css">
 </head>
 <body>
+    <!-- Banner across the top, gives update on next closure -->
     <em>Closed on Flag Day, we are very serious about our commitment to flags</em>
+
+    <!-- Nav Bar -->
     <nav>
         <ul>
             <li><a class = "currentPage" href = "about.html">About</a></li>
@@ -15,9 +20,14 @@
             <li><a href = "contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <!-- Main Image Banner -->
     <img id = "banner" src = "./assets/images/banner.png" alt = "banner logo">
+
+    <!-- Location List and Origin Story -->
     <main>
         <h1>About</h1>
+        <!-- Location List -->
         <h2>Locations</h2>
         <ul>
             <li>The MetaVerse</li>
@@ -25,8 +35,12 @@
             <li>Mushroom Kingdom</li>
             <li>Sin City</li>
         </ul>
+
+        <!-- Origin Story -->
         <h2>Origin Story</h2>
+        <!-- Image of tasty food that the whole family can enjoy -->
         <img src = "./assets/images/about.jpg" alt = "yummy food!">
+        <!-- creative backstory to inspire folks to come try our NFT food -->
         <p>We decided to open our latest location in Mark Zuckerburg's MetaVerse
             We went this route because we believe in the blockchain and understand
             the importance of things NFTs and Dodgecoin. Why eat normal food when
@@ -37,6 +51,8 @@
             your friends. Yummy Yummy Blockchain!
         </p>
     </main>
+
+    <!-- Footer at bottom of every page, resturant tagline -->
     <footer>
         "We put the L in HTML!"
     </footer>
