--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Title of Webpage - "Contact Section" -->
+    <title>Contact H-Thai-ML</title>
+    <!-- Link to CSS stylesheet -->
     <link rel = "stylesheet" href = "./assets/css/style.css">
+    <!-- Link to font awesome icons -->
     <script src="https://kit.fontawesome.com/1bae50a556.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- Banner across top of page, gives upcoming closures -->
     <em>Closed on Flag Day, we are very serious about our commitment to flags</em>
+    <!-- Nav Bar -->
     <nav>
         <ul>
             <li><a href = "about.html">About</a></li>
@@ -16,7 +21,10 @@
             <li ><a class = "currentPage" href = "contact.html">Contact</a></li>
         </ul>
     </nav>
+    <!-- Main Image -->
     <img id = "banner" src = "./assets/images/banner.png" alt = "banner logo">
+
+    <!-- Hours of Operations and Contact Info -->
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -26,12 +34,15 @@
             <strong>Saturday-Sunday:</strong> 1:00pm-10:00pm
         </p>
         <h2>Contact Info</h2>
+        <!-- Use font-awesome icons in contact info -->
         <p>
             <i class="fa-solid fa-phone"></i> <strong>Phone Number: </strong>555-5555 <br>
             <i class="fa-solid fa-envelope"></i><strong>Email: </strong> support@hTHAIml.com <br>
             <i class="fa-solid fa-map-location"></i><strong>Address: </strong> 20 College Dropout Drive <br>
         </p>
     </main>
+
+    <!-- Footer at bottom of page with tagline -->
     <footer>
         "We put the L in HTML!"
     </footer>
