--- a/menu.html
+++ b/menu.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Menu Title for Webpage -->
+    <title>H-Thai ML Menu</title> 
+    <!-- Link to CSS style sheet -->
     <link rel = "stylesheet" href = "./assets/css/style.css">
+    <!-- Link to font awesome kit -->
     <script src="https://kit.fontawesome.com/1bae50a556.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- About Page -->
+    <!-- Banner across top of page: gives upcoming closures -->
     <em>Closed on Flag Day, we are very serious about our commitment to flags</em>
+    <!-- Nav Bar -->
     <nav>
         <ul>
             <li><a href = "about.html">About</a></li>
@@ -16,9 +22,15 @@
             <li><a href = "contact.html">Contact</a></li>
         </ul>
     </nav>
+    <!-- Main banner image, need to edit -->
     <img id = "banner" src = "./assets/images/banner.png" alt = "banner logo">
+
+    <!-- Menu Items -->
+    <!-- font awesome fire = spicy -->
+    <!-- font awesome star = favorite item -->
     <main>
         <h1>Our Menu</h1>
+    <!-- Appetizers -->
         <h2>Appetizers</h2>
         <table>
             <thead>
@@ -37,6 +49,7 @@
             </tbody>
         </table>
 
+    <!-- Lunch Items -->
         <h2>Lunch</h2>
         <table>
             <thead>
@@ -67,6 +80,7 @@
             </tbody>
         </table>
 
+    <!-- Dinner Items --> 
         <h2>Dinner</h2>
         <table>
             <thead>
@@ -88,7 +102,8 @@
                 </tr>
         </table>
 
-        <h2>Desert</h2>
+    <!-- Dessert Items -->
+        <h2>Dessert</h2>
         <table>
             <thead>
                 <th>Name</th>
@@ -106,6 +121,7 @@
             </tbody>
         </table>
 
+    <!-- Beverages -->
         <h2>Beverages</h2>
         <table>
             <thead>
@@ -127,7 +143,8 @@
                 </tr>
             </tbody>
         </table>
-
+    
+    <!-- Side Orders -->
         <h2>Side Orders</h2>
         <table>
             <thead>
@@ -150,6 +167,8 @@
             </tbody>
         </table>       
     </main>
+
+    <!-- Footer to give tagline at bottom of every page -->
     <footer>
         "We put the L in HTML!"
     </footer>
