added legend to menu

--- a/menu.html
+++ b/menu.html
@@ -30,6 +30,10 @@
     <!-- font awesome star = favorite item -->
     <main>
         <h1>Our Menu</h1>
+        <!-- Legend for icons -->
+        <i class="fa-solid fa-star"> = Favorite!</i> <br>
+        <i class="fa-solid fa-fire"> = Spicy!</i> 
+
     <!-- Appetizers -->
         <h2>Appetizers</h2>
         <table>
